--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
+    "handlebars": "^4.7.7",
     "next": "13.2.4",
+    "puppeteer": "^19.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
